--- a/client/src/components/searchBar/searchBar.scss
+++ b/client/src/components/searchBar/searchBar.scss
@@ -71,20 +71,27 @@
         border: 1px solid #999;
       }
     }
-
-    button {
-      border: none;
-      cursor: pointer;
+    a{
+      flex:1;
       background-color: #fece51;
-      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-      @include sm{
-        padding: 10px;
-      }
+      button {
+        border: none;
+        cursor: pointer;
+        background-color: #fece51;
+        flex: 1;
 
-      img {
-        width: 24px;
-        height: 24px;
+        @include sm{
+          padding: 10px;
+        }
+
+        img {
+          width: 24px;
+          height: 24px;
+        }
       }
     }
   }
